end to end flow from project  creation to execute test